--- a/install.txt
+++ b/install.txt
@@ -3,20 +3,42 @@ unrar
 unace-nonfree
 p7zip-full
 cabextract
+libbz2-1.0
 obexftp
-obexfs
-mtp-tools
-mtpfs
 openobex-apps
+mtp-tools
+xterm
+curl
+git
+wvdial
+openal-info
+glew-utils
+mesa-utils
+vulkan-tools
+vainfo
+vdpauinfo
+imagemagick
+winbind
+xcalib
+obexfs
+go-mtpfs
 reiser4progs
 reiserfsprogs
 xfsprogs
+exfatprogs
+e2fsprogs
+dosfstools
+hfsutils
+hfsprogs
+jfsutils
+util-linux
+ntfs-3g
+udftools
 ffmpeg
 ffmpeg2theora
 mjpegtools
 mplayer
 mplayer-fonts
-transcode
 vcdimager
 cdrdao
 fuseiso
@@ -24,9 +46,6 @@ fuseiso9660
 lame
 x264
 x265
-xterm
-curl
-wvdial
 libmad0
 libmp3lame0
 libmng2
@@ -34,71 +53,93 @@ libmodplug1
 libmpcdec6
 libmpg123-0
 libavifile-0.7c2
-libavformat-ffmpeg56
+libavformat58
 libdv4
-gstreamer-tools
+gstreamer1.0-tools
 gstreamer1.0-nice
 gstreamer1.0-plugins-bad
-gstreamer1.0-plugins-bad-faad
-gstreamer1.0-plugins-bad-videoparsers
 gstreamer1.0-plugins-good
 gstreamer1.0-plugins-ugly
-gstreamer1.0-plugins-ugly-amr
 gstreamer1.0-libav
 gstreamer1.0-pulseaudio
+libtheora0
+libtiff5
+libopenexr25
+libjpeg62
+libfreeimage3
+libdevil1c2
+libdumb1
+libcapi20-3
+libvdpau-va-gl1
+libstdc++5
+libglade2-0
+libaldmb1
+libfam0
+libnss3
+libgomp1
+liblcms2-2
+libpcrecpp0v5
+libquadmath0
+libitm1
+libcurl3-gnutls
+libfuse2
+libncurses5
+libusb-1.0-0
+libusb-0.1-4
+gtk2-engines-pixbuf
+gtk2-engines-qtcurve
+gtk2-engines-murrine
+gtk2-engines-moblin
+gtk2-engines-aurora
+gtk2-engines-sugar
+libopenal1
 libsdl-gfx1.2-5
 libsdl-image1.2
 libsdl-mixer1.2
 libsdl-net1.2
 libsdl-sound1.2
 libsdl-ttf2.0-0
-libsdl2-2.0-0
 libsdl2-image-2.0-0
 libsdl2-mixer-2.0-0
 libsdl2-net-2.0-0
 libsdl2-ttf-2.0-0
 libalut0
-libcapi20-3
-libpng3
-freeglut3
-libfreeimage3
-libstdc++5
-python-gtk2
-python-glade2
-python-libxml2
-libglade2-0
-libglew1.13
-libjpeg62
-liballegro4.4
-libaldmb1
-xcalib
-libxcb-shape0
-libxcb-xv0
-libgconf2-4
 libphysfs1
-libdevil1c2
-libxft2
-libfam0
-libnss3
-libp11-kit-gnome-keyring
-gtk2-engines-pixbuf
-gtk2-engines-oxygen
-gtk3-engines-oxygen
+libpulsedsp
+libsdl2-2.0-0
+freeglut3
+libglew2.2
+liballegro4.4
+libxcb-composite0
+libxcb-cursor0
+libxcb-damage0
+libxcb-dri2-0
+libxcb-dri3-0
+libxcb-glx0
+libxcb-present0
+libxcb-randr0
+libxcb-record0
+libxcb-render0
+libxcb-res0
+libxcb-shape0
+libxcb-shm0
+libxcb-sync1
+libxcb-util1
+libxcb-xf86dri0
+libxcb-xfixes0
+libxcb-xinerama0
+libxcb-xinput0
+libxcb-xv0
+libxcb-xkb1
+libxcb-xrm0
+libglu1-mesa
+libxtst6
+libxt6
+libxmu6
 libxm4
-nvidia-cg-toolkit
-mono-complete
-imagemagick
-glew-utils
-ffmpegthumbs
-pavucontrol
-osspd
-osspd-pulseaudio
-kolourpaint4
-kfind
-filelight
-kcharselect
-kamerka
-dragonplayer
-kuser
-winbind
-linux-firmware-nonfree
+libsm6
+libxft2
+libxext6
+libgdk-pixbuf2.0-0
+libgtk2.0-0
+libsdl1.2debian
