--- a/install.txt
+++ b/install.txt
@@ -20,6 +20,20 @@ vdpauinfo
 imagemagick
 winbind
 xcalib
+wodim
+vcdimager
+cdrdao
+fuseiso
+fuseiso9660
+cdparanoia
+dvd+rw-tools
+normalize-audio
+cdrskin
+xorriso
+cdck
+binutils
+binutils-common
+binutils-x86-64-linux-gnu
 obexfs
 go-mtpfs
 reiser4progs
@@ -39,10 +53,6 @@ ffmpeg2theora
 mjpegtools
 mplayer
 mplayer-fonts
-vcdimager
-cdrdao
-fuseiso
-fuseiso9660
 lame
 x264
 x265
@@ -69,6 +79,18 @@ libjpeg62
 libfreeimage3
 libdevil1c2
 libdumb1
+libflac++6v5
+sox
+mpg321
+libsox-fmt-all
+flac
+libaudiofile1
+vorbis-tools
+libburn4
+libsox3
+fluid-soundfont-gm
+fluid-soundfont-gs
+libfreeimageplus3
 libcapi20-3
 libvdpau-va-gl1
 libstdc++5
@@ -106,6 +128,8 @@ libsdl2-ttf-2.0-0
 libalut0
 libphysfs1
 libpulsedsp
+libaudio2
+libmuparser2v5
 libsdl2-2.0-0
 freeglut3
 libglew2.2
