--- a/install.txt
+++ b/install.txt
@@ -92,6 +92,7 @@ fluid-soundfont-gm
 fluid-soundfont-gs
 libfreeimageplus3
 Libopenjp2-7
+libsmpeg0
 libcapi20-3
 libvdpau-va-gl1
 libstdc++5
@@ -131,6 +132,7 @@ libphysfs1
 libpulsedsp
 libaudio2
 libmuparser2v5
+libgssapi3-heimdal
 libsdl2-2.0-0
 freeglut3
 libglew2.2
@@ -169,3 +171,4 @@ libgdk-pixbuf2.0-0
 libgtk2.0-0
 libsdl1.2debian
 libxxf86dga1
+libgtk-3-0
