--- a/install.txt
+++ b/install.txt
@@ -35,6 +35,8 @@ binutils
 binutils-common
 binutils-x86-64-linux-gnu
 mc
+osspd
+osspd-pulseaudio
 obexfs
 go-mtpfs
 reiser4progs
@@ -134,6 +136,7 @@ libpulsedsp
 libaudio2
 libmuparser2v5
 libgssapi3-heimdal
+libfann2
 libsdl2-2.0-0
 freeglut3
 libglew2.2
@@ -173,3 +176,4 @@ libgtk2.0-0
 libsdl1.2debian
 libxxf86dga1
 libgtk-3-0
+libpangoxft-1.0-0
