--- a/install.txt
+++ b/install.txt
@@ -147,6 +147,9 @@ libpython2-stdlib
 libpython2.7-minimal
 libpython2.7-stdlib
 libudev0
+libgconf-2-4
+libboost-filesystem1.74.0
+libboost-system1.74
 libsdl2-2.0-0
 freeglut3
 libglew2.2
