--- a/install.txt
+++ b/install.txt
@@ -165,6 +165,10 @@ libnotify4
 libx86-1
 libpython2.7
 libncursesw5
+libdvbv5-0
+libdirectfb-1.7-7
+libdirectfb-extra
+libva-glx2
 libsdl2-2.0-0
 freeglut3
 libglew2.2
